--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "nodets",
+  "name": "node-ts-template",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "description": "This is the base template for the node.js project, implemented using typescript with any DB type being plugged in via ORM.",
+  "main": "app.js",
+  "author": "Phillip-Hope Kolawole Ojo",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
     "nodemon": "^2.0.15"
+  },
+  "scripts": {
+    "setup": "npm install yarn && yarn install",
+    "dev:watch": "tsc -w",
+    "dev:server": "nodemon dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "npm run setup && npm run build && node dist/app.js"
   }
 }
