--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "printWidth": 100,
-    "singleQuote": true,
+    "trailingComma": "es5",
     "tabWidth": 4,
+    "printWidth": 100,
     "semi": true,
-    "trailingComma": "es5"
+    "singleQuote": true,
+    "bracketSpacing": true
 }
