--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
-    "nodemon": "^2.0.15"
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
+    "prettier": "2.6.2"
   },
   "scripts": {
     "setup": "npm install yarn && yarn install",
     "dev:watch": "tsc -w",
     "dev:server": "nodemon dist/app.js",
+    "lint": "eslint --fix .",
+    "format": "prettier -w .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "npm run setup && npm run build && node dist/app.js"
