--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "typescript": "^4.6.4"
   },
@@ -26,11 +27,11 @@
   "scripts": {
     "setup": "npm install yarn && yarn install",
     "dev:watch": "tsc -w",
-    "dev:server": "nodemon dist/app.js",
+    "dev:server": "nodemon -r dotenv/config dist/app.js",
     "lint": "eslint --fix .",
     "format": "prettier -w .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run setup && npm run build && node dist/app.js"
+    "start": "npm run setup && npm run build && node -r dotenv/config dist/app.js"
   }
 }
