--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-ts-template",
   "version": "1.0.0",
   "description": "This is the base template for the node.js project, implemented using typescript with any DB type being plugged in via ORM.",
-  "main": "app.js",
+  "main": "dist/app.js",
   "author": "Phillip-Hope Kolawole Ojo",
   "license": "ISC",
   "dependencies": {
@@ -10,11 +10,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "mongoose": "^6.4.0",
+    "redis": "^4.1.0",
+    "sequelize": "^6.21.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.21",
+    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
