--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Phillip-Hope Kolawole Ojo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
