--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "kafkajs": "^2.1.0",
+    "redis": "^4.1.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
