--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.6.0",
+    "kafkajs": "^2.1.0",
     "mongoose": "^6.4.0",
+    "morgan": "^1.10.0",
     "redis": "^4.1.0",
     "sequelize": "^6.21.0",
-    "kafkajs": "^2.1.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
