--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "glob": "^8.0.3",
     "joi": "^17.6.0",
     "kafkajs": "^2.1.0",
     "mongoose": "^6.4.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/glob": "^7.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
